@@ -1,3 +1,4 @@
+1/9/12 use an unlicensed placeholder for dropper that will have proper shape and prospective
 1/5/12 simplistic version of stock solution inside dropper glass, doesn't conform to glass shape
 1/5/12 move responsibility for visibility of shaker and dropper into the model
 1/5/12 make concentration meter read all liquids: solution in beaker, solvent faucet, drain faucet, dropper (handle intersection in view)
